agrega los archivos de todo el proyecto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Practica Bootstrap </title>
+    <title>Practica Bootstrap</title>
     <meta
       name="description"
       content="Debemos realizar un pagina utilizando bootstrap, guiados por un diseño dado"
@@ -11,12 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
-      href="/Bootstrap/bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css"
+      href="bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css"
     />
     <link
       rel="stylesheet"
-      href="/Bootstrap/bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.min.css"
+      href="bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap-grid.min.css"
     />
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/oradores.css" />
     <link rel="stylesheet" href="css/lugar-fecha.css" />
@@ -217,7 +218,9 @@
       </div>
     </main>
     <footer class="footer">
-      <ul class="footer__lista d-flex flex-row justify-content-evenly align-items-center">
+      <ul
+        class="footer__lista d-flex flex-row justify-content-evenly align-items-center"
+      >
         <li class="footer__item">
           <a href="#" class="footer__link text-white text-decoration-none"
             >Preguntas Frecuentes</a
