elimina asociacion de mas

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
       rel="stylesheet"
       href="bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css"
     />
-    <link
-      rel="stylesheet"
-      href="bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap-grid.min.css"
-    />
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/oradores.css" />
@@ -383,5 +379,6 @@
     </footer>
 
     <script src="comprar-ticket.js"></script>
+    <script src="bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
