ultimos detalles corregidos

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid text-bg-dark p-1">
+      <nav class="navbar navbar-expand-md bg-light">
+        <div class="container-fluid text-bg-dark p-1 d-flex justify-content-between">
           <a
             class="navbar-brand text-bg-dark"
             href="https://github.com/rafael-romero/pagina-con-bootstrap-codoACodo"
@@ -88,7 +88,7 @@
     <main>
       <div class="portada container-fluid">
         <div class="portada__contenedor" id="conferencia">
-          <h2 class="portada__titulo text-end fs-2">Conf Bs As</h2>
+          <h2 class="portada__titulo text-end fs-4">Conf Bs As</h2>
           <p class="portada__texto text-end fs-6">
             Bs As llega por primera vez a Argentina. Un evento para compartir
             con nuestra comunidad el conocimiento y experiencia de los expertos
@@ -97,12 +97,16 @@
             primer nivel que tenemos para ti. Te esperamos!
           </p>
           <div class="contenedor__botones">
-            <button type="button" class="btn btn-outline-light">
+            <a href="#formulario">
+            <button type="button" class="btn btn-outline-light" href="#formulario">
               Quiero ser orador
             </button>
+            </a>
+            <a href="#comprar-tickets">
             <button type="button" class="btn btn-success">
               Comprar Tickets
             </button>
+            </a>
           </div>
         </div>
       </div>
